<resources>
    <string name="app_name">SamadMentorship</string>
    <string name="title">Android Mentorship \nProgram</string>
    <string name="contBtn">Log in</string>
    <string name="imgDesc">Middle image</string>
    <string name="enter_username_text">Enter your username</string>
    <string name="enter_password_text">Enter your password</string>
    <string name="back_button_content_description">Back button</string>
    <string name="home_activity_title">Home</string>
    <string name="label_username">Username: %s</string>
    <string name="label_password">Password: %s</string>
    <string name="no_username_or_password_toast">Username or password field is empty</string>
    <string name="goto_detail_fragment_string">Go to <b>Details</b> fragment</string>
    <string name="goto_home_fragment_string">Go to <b>Home</b> fragment</string>
    <string name="goto_new_activity">Go to new activity</string>
    <string name="an_image_describing_the_page">An image describing the page</string>
    <string name="details_page">Details Fragment</string>
    <string name="home_page">Home Fragment</string>
    <string name="back_button_in_main_activity">back button in main activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Signup fragment-->
    <string name="signup_fragment_title_text">Android Mentorship \n program</string>
    <string name="signup_submit_button">Sign Up</string>
    <string name="signup_password">Password</string>
    <string name="signup_username">Username</string>
    <string name="signup_full_address">Full Address</string>
    <string name="signup_full_name">Full Name</string>
    <string name="signup_email_address">Email Address</string>
    <!-- SignUpViewModel error strings-->
    <string-array name="signup_error_messages">
        <item>Full name field is empty</item>
        <item>Email Address field is empty</item>
        <item>User Name field is empty</item>
        <item>Password field is incorrect</item>
    </string-array>
</resources>
