<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignUpFragment">
    <TextView
        android:id="@+id/singUpPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/signup_title_margin_top"
        android:text="@string/signup_fragment_title_text"
        android:padding="@dimen/signup_text_edit_padding"
        android:textAlignment="center"
        android:textSize="@dimen/signup_title_text_size"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="@dimen/signup_text_edit_width"
        android:layout_height="@dimen/signup_text_edit_height"
        android:layout_marginTop="@dimen/signup_text_edit_1_margin_top"
        android:background="@drawable/text_edit_border"
        android:padding="@dimen/signup_text_edit_padding"
        android:hint="@string/signup_full_name"
        android:textColor="@color/general_tint"
        android:maxLength="30"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singUpPageTitle"
        android:autofillHints="" />
    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="@dimen/signup_text_edit_width"
        android:layout_height="@dimen/signup_text_edit_height"
        android:layout_marginTop="@dimen/signup_text_edit_margin_top"
        android:background="@drawable/text_edit_border"
        android:padding="@dimen/signup_text_edit_padding"
        android:hint="@string/signup_email_address"
        android:textColor="@color/general_tint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName"
        android:autofillHints="" />
    <EditText
        android:id="@+id/fullAddress"
        android:layout_width="@dimen/signup_text_edit_width"
        android:layout_height="@dimen/signup_text_edit_height"
        android:layout_marginTop="@dimen/signup_text_edit_margin_top"
        android:background="@drawable/text_edit_border"
        android:padding="@dimen/signup_text_edit_padding"
        android:hint="@string/signup_full_address"
        android:textColor="@color/general_tint"
        android:maxLength="30"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress"
        android:autofillHints="" />
    <EditText
        android:id="@+id/userName"
        android:layout_width="@dimen/signup_text_edit_width"
        android:layout_height="@dimen/signup_text_edit_height"
        android:layout_marginTop="@dimen/signup_text_edit_margin_top"
        android:background="@drawable/text_edit_border"
        android:padding="@dimen/signup_text_edit_padding"
        android:hint="@string/signup_username"
        android:textColor="@color/general_tint"
        android:maxLines="1"
        android:digits="abcdefghijklmnopqrstuvwxyz1234567890"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullAddress" />
    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/signup_text_edit_width"
        android:layout_height="@dimen/signup_text_edit_height"
        android:layout_marginTop="@dimen/signup_text_edit_margin_top"
        android:background="@drawable/text_edit_border"
        android:padding="@dimen/signup_text_edit_padding"
        android:hint="@string/signup_password"
        android:textColor="@color/general_tint"
        android:maxLength="20"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        android:autofillHints=""
        android:inputType="textPassword" />
    <Button
        android:id="@+id/signupSubmitButton"
        android:layout_width="@dimen/signup_submit_button_width"
        android:layout_height="@dimen/signup_submit_button_height"
        android:layout_marginBottom="@dimen/signup_submit_button_margin_bottom"
        android:background="@drawable/rounder_corner_rect"
        android:text="@string/signup_submit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
