<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/goto_home_fragment_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/fragment_navigation_button_layout_height"
        android:layout_marginBottom="@dimen/fragment_navigation_button_margin_bottom"
        android:paddingStart="@dimen/fragment_navigation_button_padding"
        android:paddingEnd="@dimen/fragment_navigation_button_padding"
        android:text="@string/goto_home_fragment_string"
        android:backgroundTint="@color/mat_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/details_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_title_margin_top"
        android:text="@string/details_page"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/fragment_title_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/fragment_image_width"
        android:layout_height="@dimen/fragment_image_height"
        android:layout_marginTop="@dimen/fragment_image_margin_top"
        android:contentDescription="@string/an_image_describing_the_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/fragment_image_constraint_horizontal_bias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_page_title"
        app:srcCompat="@drawable/details_icon_500" />
</androidx.constraintlayout.widget.ConstraintLayout>
